--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <!--
+      Connection to the lisk network
+    -->
+    <script src="https://gitcdn.xyz/repo/LiskHQ/lisk-js/master/dist/lisk-js.js"></script>
+
     <title>React App</title>
   </head>
   <body>
